<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.product.ProductFragment">


            <ViewFlipper
                android:id="@+id/viewFlipper"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:autoStart="true"
                android:flipInterval="2500"
                android:inAnimation="@anim/slide_in_right"
                android:outAnimation="@anim/slide_in_left"
                app:layout_constraintTop_toTopOf="parent">

            </ViewFlipper>

            <TextView
                android:id="@+id/productBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/test_brand"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewFlipper" />

            <TextView
                android:id="@+id/productTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_extra_small"
                android:text="@string/test_title"
                android:textSize="@dimen/text_size_extra_extra_large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/productBrand"
                app:layout_constraintTop_toBottomOf="@+id/productBrand" />

            <TextView
                android:id="@+id/productDiscountPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/test_price_with_discount"
                android:textSize="@dimen/text_size_extra_extra_large"
                app:layout_constraintStart_toStartOf="@+id/productTitle"
                app:layout_constraintTop_toBottomOf="@+id/productTitle" />

            <TextView
                android:id="@+id/originalProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/test_init_price"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintBottom_toBottomOf="@+id/productDiscountPrice"
                app:layout_constraintStart_toEndOf="@+id/productDiscountPrice"
                app:layout_constraintTop_toTopOf="@+id/productDiscountPrice" />

            <TextView
                android:id="@+id/discountLabel"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="@dimen/margin_small"
                android:paddingHorizontal="4dp"
                android:background="@drawable/disount_label_background"
                android:gravity="center"
                android:text="@string/test_discount"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintBottom_toBottomOf="@+id/originalProductPrice"
                app:layout_constraintStart_toEndOf="@+id/originalProductPrice"
                app:layout_constraintTop_toTopOf="@+id/originalProductPrice" />

            <View
                android:id="@+id/stockIndicator"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/stock_green_dot_background"
                app:layout_constraintBottom_toBottomOf="@+id/productStockCount"
                app:layout_constraintEnd_toStartOf="@+id/productStockCount"
                app:layout_constraintTop_toTopOf="@+id/productStockCount" />

            <TextView
                android:id="@+id/productStockCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium"
                android:text="@string/test_stock_count"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintBottom_toBottomOf="@+id/discountLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/discountLabel" />

            <ImageView
                android:id="@+id/starIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="@dimen/margin_small"
                android:contentDescription="@string/rate_star_icon"
                android:src="@drawable/ic_star"
                app:layout_constraintStart_toStartOf="@+id/productDiscountPrice"
                app:layout_constraintTop_toBottomOf="@+id/productDiscountPrice" />

            <TextView
                android:id="@+id/productRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/test_rating"
                app:layout_constraintBottom_toBottomOf="@+id/starIcon"
                app:layout_constraintStart_toEndOf="@+id/starIcon"
                app:layout_constraintTop_toTopOf="@+id/starIcon" />

            <TextView
                android:id="@+id/productCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/test_category"
                app:layout_constraintStart_toStartOf="@+id/starIcon"
                app:layout_constraintTop_toBottomOf="@+id/starIcon" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_large"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/productCategory" />

            <TextView
                android:id="@+id/productDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:text="@string/test_description_big"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/purchaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/ic_cart" />

</androidx.constraintlayout.widget.ConstraintLayout>